--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -19,15 +19,29 @@
 	font-display: swap;
   }
   
-:root{
-	--bg-color: #FFFFFF;
-	--text-color: black;
-	--second-color: #5a7184;
-	--main-color: #6e54fa;
-	--big-font: 6rem;
-	--h2-font: 3rem;
-	--p-font: 1.1rem;
+  :root {
+    --bg-color:  #0F2137;
+    --text-color: #ffffff;
+    --second-color: #0A8080;
+    --main-color: #0F2137;
+    --main-color2: #0F2137;
+    --big-font: 6rem;
+    --h2-font: 3rem;
+    --p-font: 1.1rem;
 }
+
+
+.dark-theme{
+    --bg-color: #ffffff;
+    --text-color: #0F2137;
+    --second-color: #0A8080;
+    --main-color: #e6d8cc;
+    --main-color2: #FFF5ED;
+    --big-font: 6rem;
+    --h2-font: 3rem;
+    --p-font: 1.1rem;
+}
+
 body{
 	background: var(--bg-color);
 	color: var(--text-color);
@@ -53,7 +67,7 @@ header{
 
 .logo{
     display: flex;
-    color: black;
+    color: var(--text-color);
     font-size: 20px;
 }
 
@@ -65,22 +79,22 @@ header{
 
 .navlist a{
     position: relative;
-    color: black;
+    color: var(--text-color);
     margin: 0 20px;
     letter-spacing: 2px;
     transition: all .4s ease;
 }
 li .active{
-    color: #0A8080;
+    color: var(--second-color);
 }
 
 .navlist a:hover{
-    color: #0A8080;
+    color: var(--second-color);
 }
 
 .navlist a::after{
     position: absolute;
-    background-color: #0A8080;
+    background-color: var(--second-color);
     content: '';
     left: 0;
     bottom: 0;
@@ -102,14 +116,31 @@ li .active{
 }
 
 .btn{
-    color: black;
+    color: var(--text-color);
     letter-spacing: 2px;
     margin-right: 20px;
 }
 
+
 .btn2{
-    color: #0A8080;
-    position: relative;
+    color: var(--text-color);
+}
+
+.other{
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.other a:last-child {
+    color: var(--second-color);
+}
+
+#moon{
+    font-size: 18px;
+    color: var(--text-color);
+    cursor: pointer;
 }
 
 .line img{
@@ -130,13 +161,13 @@ li .active{
     align-items: center;
     padding: 8% 14%;
     text-align: start;
-    background-color: #FFF5ED;
+    background-color: var(--main-color);
     width: 100%;
     height: 100vh;
 }
 
 .title-sec h1{
-    color: black;
+    color: var(--text-color);
     font-size: 70px;
 }
 
@@ -145,13 +176,13 @@ li .active{
 }
 
 .title-sec p{
-    color: black;
+    color: var(--text-color);
     margin: 15px 0;
 }
 
 .getbtn{
-    background-color: #0A8080;
-    color: white;
+    background-color: var(--second-color);
+    color: var(--text-color);
     letter-spacing: 1px;
     padding: 12px 22px;
     margin-top: 15px;
@@ -243,7 +274,7 @@ li .active{
 }
 
 .col-1 p{
-    color: black;
+    color: var(--text-color);
     line-height: 40px;
     margin-top: 20px;
 }
@@ -263,7 +294,7 @@ li .active{
 }
 
 .check-1 a {
-    color: black;
+    color: var(--text-color);
     font-size: small;
 }
 
@@ -282,7 +313,7 @@ li .active{
 }
 
 .check-2 a {
-    color: black;
+    color: var(--text-color);
     font-size: small;
 }
 
@@ -331,12 +362,12 @@ li .active{
 
 .detailss p{
     font-size: 25px;
-    color: black;
+    color: var(--text-color);
     margin-bottom: 50px;
 }
 
 .detailss .p1{
-    color: black;
+    color: var(--text-color);
     font-size: 15px;
     line-height: 30px;
 }
@@ -361,7 +392,7 @@ li .active{
     align-items: center;
     text-align: start;
     gap: 3rem;
-    background-color: white;
+    background-color: var(--bg-color);
     width: 60%;
     padding: 3%;
 }
@@ -371,7 +402,7 @@ li .active{
 }
 .titles p{
     font-size: 10px;
-    color: black;
+    color: var(--text-color);
     width: 70%;
     margin-top: 10px;
 }
@@ -383,10 +414,10 @@ form input{
     padding: 15px 30px;
     width: 65%;
     border-radius: 10px;
-    color: black;
+    color: var(--text-color);
 }
 .txt3 p{
-    color: black;
+    color: var(--text-color);
     font-size: 8px;
     margin-top: 10px;
     margin-left: 2px;
@@ -394,7 +425,7 @@ form input{
 
 form a{
     background-color: #DB4A87;
-    color: white;
+    color: var(--bg-color);
     padding: 10px 20px;
     margin-left: 10px;
 }
@@ -429,7 +460,7 @@ footer{
 }
 
 .copy p{
-    color: black;
+    color: var(--text-color);
     font-size: small;
 }
 
@@ -441,7 +472,7 @@ footer{
 }
 
 .det-foot a{
-    color: black;
+    color: var(--text-color);
     margin-bottom: 10px;
     display: inline-flex;
 }
@@ -534,7 +565,7 @@ footer{
         align-items: center;
         padding: 150px 30px;
         gap: 50px;
-        background-color: #0A8080;
+        background-color: var(--second-color);
         transition: all .4s ease;
     }
     .open {
@@ -579,7 +610,7 @@ footer{
 
     form input{
         width: 300px;
-        background-color: white;
+        background-color: var(--bg-color);
         box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
         border-radius: 18px;
         margin-left: 30px;
