Quick Fix in Responsive

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -526,6 +526,10 @@ footer{
         margin: 15px;
     }
 
+    .other{
+        gap: 10px;
+    }
+
     .support{
         text-align: center;
     }   
