--- a/assets/css/support.css
+++ b/assets/css/support.css
@@ -484,6 +484,10 @@ footer{
         margin: 15px;
     }
 
+    .other{
+        gap: 10px;
+    }
+
     .support{
         text-align: center;
     }   
