--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -622,6 +622,10 @@ footer {
         margin: 15px;
     }
 
+    .other{
+        gap: 5px;
+    }
+
     .home {
         padding: 15% 0%;
 
@@ -638,6 +642,17 @@ footer {
         margin-top: 8%;
         grid-template-columns: repeat(2, 1fr);
 
+    }
+
+    .arrow1 i{
+        left: 11%;
+        top: 190%;
+    }
+    
+    .arrow2 i{
+
+        right: 5%;
+        top: 190%;
     }
 
     .quot p {
@@ -705,7 +720,10 @@ footer {
 
     .home {
         padding: 15% 0%;
+    }
 
+    .other{
+        gap: 10px;
     }
 
     .cards {
@@ -737,6 +755,16 @@ footer {
 
     .team {
         margin-top: 50%;
+    }
+    .arrow1 i{
+        left: 11%;
+        top: 170%;
+    }
+    
+    .arrow2 i{
+
+        right: 5%;
+        top: 170%;
     }
 
     .col__blog {
