--- a/assets/css/support.css
+++ b/assets/css/support.css
@@ -47,6 +47,9 @@ body{
 	color: var(--text-color);
 }
 
+body::-webkit-scrollbar{
+    display: none;
+}
 
 
 header{
@@ -157,7 +160,8 @@ li .active{
 .support{
     display: grid;
     grid-template-columns: repeat(auto-fill , minmax(500px , 1fr));
-    justify-content: space-between;
+    justify-content: center;
+    gap: 20rem;
     align-items: center;
     padding: 8% 14%;
     text-align: start;
@@ -195,7 +199,7 @@ li .active{
 }
 
 .supp-img img{
-    width: 100%;
+    width: 60%;
     height: auto;
 }
 
@@ -463,6 +467,7 @@ footer{
 
     .support{
         text-align: center;
+        gap: 0;
     }
 
     
@@ -490,6 +495,7 @@ footer{
 
     .support{
         text-align: center;
+        gap: 0;
     }   
     
 
