--- a/assets/css/advertise.css
+++ b/assets/css/advertise.css
@@ -750,7 +750,7 @@ footer{
 
     .popup{
         position: fixed;
-        background-color: white;
+        background-color:var(--bg-color);
         z-index: 100001;
         width: 380px;
         height: 500px;
@@ -778,11 +778,12 @@ footer{
         margin-top: 20px;
         font-size: 15px;
         margin-bottom: 50px;
+        color: var(--text-color);
     }
 
     .remove i{
         background-color: rgb(187, 187, 187);
-        color: #0A8080;
+        color: var(--second-color);
         font-size: 25px;
         border-radius: 25px;
         position: absolute;
