Fix Something wrong

--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -20,13 +20,14 @@
   }
   
 :root{
-	--bg-color: #FFFFFF;
-	--text-color: black;
-	--second-color: #5a7184;
-	--main-color: #6e54fa;
-	--big-font: 6rem;
-	--h2-font: 3rem;
-	--p-font: 1.1rem;
+	--bg-color:  #0F2137;
+    --text-color: #ffffff;
+    --second-color: #0A8080;
+    --main-color: #0F2137;
+    --main-color2: #0F2137;
+    --big-font: 6rem;
+    --h2-font: 3rem;
+    --p-font: 1.1rem;
 }
 body{
 	background: var(--bg-color);
@@ -52,7 +53,7 @@ header {
 
 .logo{
     display: flex;
-    color: black;
+    color: var(--text-color);
     font-size: 20px;
 }
 
@@ -64,22 +65,22 @@ header {
 
 .navlist a{
     position: relative;
-    color: black;
+    color: var(--text-color);
     margin: 0 20px;
     letter-spacing: 2px;
     transition: all .4s ease;
 }
 li .active{
-    color: #0A8080;
+    color: var(--second-color);
 }
 
 .navlist a:hover{
-    color: #0A8080;
+    color: var(--second-color);
 }
 
 .navlist a::after{
     position: absolute;
-    background-color: #0A8080;
+    background-color: var(--second-color);
     content: '';
     left: 0;
     bottom: 0;
@@ -101,13 +102,13 @@ li .active{
 }
 
 .btn{
-    color: black;
+    color: var(--text-color);
     letter-spacing: 2px;
     margin-right: 20px;
 }
 
 .btn2{
-    color: #0A8080;
+    color: var(--second-color);
     position: relative;
 }
 
@@ -128,13 +129,13 @@ li .active{
     align-items: center;
     padding: 8% 14%;
     text-align: start;
-    background-color: #D4DAE2;
+    background-color: var(--main-color);
     width: 100%;
     height: 100vh;
 }
 
 .title-sec h1{
-    color: black;
+    color: var(--text-color);
     font-size: 70px;
 }
 
@@ -143,13 +144,13 @@ li .active{
 }
 
 .title-sec p{
-    color: black;
+    color: var(--text-color);
     margin: 15px 0;
 }
 
 .getbtn{
-    background-color: #0A8080;
-    color: white;
+    background-color: var(--second-color);
+    color:var(--bg-color);
     letter-spacing: 1px;
     padding: 12px 22px;
     margin-top: 15px;
@@ -167,7 +168,7 @@ li .active{
 }
 
 .h1 {
-    background-color: #D4DAE2;
+    background-color: var(--main-color);
     color: white;
     padding: 20px;
     text-align: center;
@@ -187,7 +188,7 @@ li .active{
 
 .faq {
     width: 700px;
-    background-color: #fff;
+    background-color: var(--second-color);
     border: none;
     margin-bottom: 10px;
     border-radius: 15px;
@@ -208,10 +209,12 @@ li .active{
 .answer {
     margin-top: 10px;
     display: none;
-    color: grey;
+    color: rgb(206, 206, 206);
 }
 
-
+body::-webkit-scrollbar{
+    display: none;
+}
 
 
 .subscribe{
@@ -234,7 +237,7 @@ li .active{
     align-items: center;
     text-align: start;
     gap: 3rem;
-    background-color: white;
+    background-color: var(--bg-color);
     width: 60%;
     padding: 2.5%;
 }
@@ -244,7 +247,7 @@ li .active{
 }
 .titles p{
     font-size: 10px;
-    color: black;
+    color: var(--text-color);
     width: 70%;
     margin-top: 10px;
 }
@@ -256,10 +259,10 @@ form input{
     padding: 15px 30px;
     width: 65%;
     border-radius: 10px;
-    color: black;
+    color: var(--text-color);
 }
 .txt3 p{
-    color: black;
+    color: var(--text-color);
     font-size: 8px;
     margin-top: 10px;
     margin-left: 2px;
@@ -275,7 +278,7 @@ form a{
 footer{
     width: 100%;
     height: auto;
-    padding: 0% 10% 2% 10%;
+    padding: 5% 10% 5% 10%;
 }
 
 .copy img{
@@ -302,7 +305,7 @@ footer{
 }
 
 .copy p{
-    color: black;
+    color: var(--text-color);
     font-size: small;
 }
 
@@ -314,7 +317,7 @@ footer{
 }
 
 .det-foot a{
-    color: black;
+    color: var(--text-color);
     margin-bottom: 10px;
     display: inline-flex;
 }
