--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,11 @@
 }
 
 :root {
-    --bg-color: #FFFFFF;
-    --text-color: black;
-    --second-color: #5a7184;
-    --main-color: #6e54fa;
+    --bg-color:  #0F2137;
+    --text-color: #ffffff;
+    --second-color: #0A8080;
+    --main-color: #0F2137;
+    --main-color2: #0F2137;
     --big-font: 6rem;
     --h2-font: 3rem;
     --p-font: 1.1rem;
@@ -79,11 +80,11 @@ body {
 .content p {
     margin-top: 2rem;
     margin-bottom: 5rem;
-    color: black;
+    color: var(--text-color);
 }
 
 .content a {
-    color: white;
+    color: var(--text-color);
     background-color: #0F2137;
     padding: 15px;
     border-radius: 15px;
@@ -93,7 +94,7 @@ body {
     position: absolute;
     right: 5%;
     top: 5%;
-    background-color: white;
+    background-color: var(--bg-color);
     border-radius: 50%;
     font-size: 30px;
     cursor: pointer;
@@ -117,7 +118,7 @@ header {
 
 .logo {
     display: flex;
-    color: black;
+    color: var(--text-color);
     font-size: 20px;
 }
 
@@ -129,19 +130,19 @@ header {
 
 .navlist a {
     position: relative;
-    color: black;
+    color: var(--text-color);
     margin: 0 20px;
     letter-spacing: 2px;
     transition: all .4s ease;
 }
 
 .navlist a:hover {
-    color: #0A8080;
+    color: var(--second-color);
 }
 
 .navlist a::after {
     position: absolute;
-    background-color: #0A8080;
+    background-color: var(--second-color);
     content: '';
     left: 0;
     bottom: 0;
@@ -164,18 +165,18 @@ header {
 }
 
 .btn {
-    color: black;
+    color: var(--text-color);
     letter-spacing: 2px;
     margin-right: 20px;
     transition: all .4s ease;
 }
 
 .btn:hover {
-    color: #0A8080;
+    color: var(--second-color);
 }
 
 .btn2 {
-    color: #0A8080;
+    color: var(--second-color);
     position: relative;
 }
 
@@ -194,18 +195,18 @@ header {
 }
 
 .title-sec h1 {
-    color: black;
+    color: var(--text-color);
     font-size: 30px;
 }
 
 .title-sec p {
-    color: black;
+    color: var(--text-color);
     margin: 15px;
 }
 
 .getbtn {
-    background-color: #0A8080;
-    color: white;
+    background-color: var(--second-color);
+    color: var(--bg-color);
     letter-spacing: 1px;
     padding: 12px 22px;
     margin-top: 15px;
@@ -225,7 +226,7 @@ header {
 .cards {
     width: 100%;
     height: 100%;
-    background-color: #FFF5ED;
+    background-color: var(--bg-color);
     position: absolute;
     top: 80%;
     padding: 8% 14%;
@@ -237,7 +238,7 @@ header {
 
 .cards p {
     font-size: 10px;
-    color: black;
+    color: var(--text-color);
     margin-top: 15px;
 }
 
@@ -297,7 +298,7 @@ header {
 }
 
 .quot .p2 {
-    color: black;
+    color: var(--text-color);
     bottom: 30%;
     font-size: 10px;
 }
@@ -328,7 +329,7 @@ header {
 }
 
 li .active {
-    color: #0A8080;
+    color: var(--second-color);
 }
 
 
@@ -373,13 +374,13 @@ li .active {
 
 .details-col p {
     font-size: small;
-    color: black;
+    color: var(--text-color);
     margin-bottom: 10px;
 }
 
 .swiper-button-prev,
 .swiper-button-next {
-    color: black;
+    color: var(--text-color);
 
 }
 
@@ -446,7 +447,7 @@ li .active {
 .col-blog .image .txt1 {
     position: absolute;
     bottom: -232%;
-    color: white;
+    color: var(--bg-color);
     margin: 10px 0 50px 10px;
     width: 18%;
     font-size: small;
@@ -455,7 +456,7 @@ li .active {
 .col-blog .image .txt2 {
     position: absolute;
     bottom: -256%;
-    color: white;
+    color: var(--bg-color);
     margin: 10px 0 50px 10px;
     width: 18%;
     font-size: small;
@@ -481,7 +482,7 @@ li .active {
     align-items: center;
     text-align: start;
     gap: 3rem;
-    background-color: white;
+    background-color: var(--bg-color);
     width: 60%;
     padding: 2.5%;
 }
@@ -492,7 +493,7 @@ li .active {
 
 .titles p {
     font-size: 10px;
-    color: black;
+    color: var(--text-color);
     width: 70%;
     margin-top: 10px;
 }
@@ -504,11 +505,11 @@ form input {
     padding: 15px 30px;
     width: 65%;
     border-radius: 10px;
-    color: black;
+    color: var(--text-color);
 }
 
 .txt3 p {
-    color: black;
+    color: var(--text-color);
     font-size: 8px;
     margin-top: 10px;
     margin-left: 2px;
@@ -516,7 +517,7 @@ form input {
 
 form a {
     background-color: #810539;
-    color: white;
+    color: var(--bg-color);
     padding: 10px 20px;
     margin-left: 10px;
 }
@@ -550,7 +551,7 @@ footer {
 }
 
 .copy p {
-    color: black;
+    color: var(--text-color);
     font-size: small;
 }
 
@@ -562,7 +563,7 @@ footer {
 }
 
 .det-foot a {
-    color: black;
+    color: var(--text-color);
     margin-bottom: 10px;
     display: inline-flex;
 }
@@ -652,7 +653,7 @@ footer {
     .det {
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
-        background-color: white;
+        background-color: var(--bg-color);
         width: 100%;
 
     }
@@ -731,7 +732,7 @@ footer {
     .det {
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
-        background-color: white;
+        background-color: var(--bg-color);
         width: 100%;
 
     }
@@ -784,7 +785,7 @@ footer {
     }
 
     .mob_title a {
-        color: white;
+        color: var(--bg-color);
         background-color: #0F2137;
         padding: 12px 50px;
         border-radius: 15px;
@@ -816,13 +817,13 @@ footer {
 
     form input {
         width: 100%;
-        background-color: white;
+        background-color: var(--bg-color);
         box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
     }
 
 
     form button {
-        color: white;
+        color: var(--bg-color);
         background-color: #0F2137;
         padding: 15px 7rem;
         border-radius: 15px;
@@ -835,8 +836,8 @@ footer {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: white;
-        color: black;
+        background-color: var(--bg-color);
+        color: var(--text-color);
         border-radius: 15px;
         margin-bottom: 30px;
         font-size: 13px;
